--- a/ducky.css
+++ b/ducky.css
@@ -21,6 +21,8 @@ html {
   background-position: -100px -160px;
   width: 110px;
   height: 115px;
+  left: 50px;
+  top:50px;
   /* GIVE THE LEFT AND TOP POSITION OF DUCK HAVE A TRANSITION EFFECT
   ONLY NEEDED CHANGE IN THIS FILE!! */
   transition: top 2s, left 2s;
